--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: Part writing Error Checker
+site_name: Part Writing Error Checker
 site_url: https://honorscapstoneproject.readthedocs.io/
 theme: readthedocs
 nav:
@@ -14,4 +14,5 @@ nav:
   - Development:
     - 'Key Decisions': 'KeyDecisions.md'
     - 'Interesting Notes': 'InterestingNotes.md'
+    - 'Future Work': 'FutueWork.md'
     - 'Credits': 'Credits.md'
