--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,5 +14,5 @@ nav:
   - Development:
     - 'Key Decisions': 'KeyDecisions.md'
     - 'Interesting Notes': 'InterestingNotes.md'
-    - 'Future Work': 'FutueWork.md'
+    - 'Future Work': 'FutureWork.md'
     - 'Credits': 'Credits.md'
